correção do posicionamento do rodapé

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
@@ -7,58 +7,61 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>
-      <div class="container header-content">
-        <img
-          src="img/diogo.jpg"
-          alt="Foto de Diogo Rodrigues Nunes"
-          class="profile-pic"
-        />
-        <div>
-          <h1>Diogo Rodrigues Nunes</h1>
-          <p>Diretor Executivo | Especialista em TI e Gestão Escolar</p>
-          <button onclick="scrollToSection()">Saiba Mais</button>
+    <div class="wrapper">
+      <header>
+        <div class="container header-content">
+          <img
+            src="img/diogo.jpg"
+            alt="Foto de Diogo Rodrigues Nunes"
+            class="profile-pic"
+          />
+          <div>
+            <h1>Diogo Rodrigues Nunes</h1>
+            <p>Diretor Executivo | Especialista em TI e Gestão Escolar</p>
+            <button onclick="scrollToSection()">Saiba Mais</button>
+          </div>
         </div>
-      </div>
-    </header>
+      </header>
 
-    <main id="about">
-      <section class="container">
-        <h2>Sobre Mim</h2>
-        <p>
-          Atuo como Diretor Executivo no Colégio São Francisco de Assis,
-          liderando uma equipe de mais de 100 pessoas. Minha trajetória começou
-          na área de TI, onde desenvolvi soluções em infraestrutura, automações
-          com PowerShell e projetos em Docker. Atualmente, também me dedico à
-          gestão financeira, comunicação institucional e inovação educacional.
-        </p>
-      </section>
+      <main id="about">
+        <section class="container">
+          <h2>Sobre Mim</h2>
+          <p>
+            Atuo como Diretor Executivo no Colégio São Francisco de Assis,
+            liderando uma equipe de mais de 100 pessoas. Minha trajetória
+            começou na área de TI, onde desenvolvi soluções em infraestrutura,
+            automações com PowerShell e projetos em Docker. Atualmente, também
+            me dedico à gestão financeira, comunicação institucional e inovação
+            educacional.
+          </p>
+        </section>
 
-      <section class="container">
-        <h2>Principais Competências</h2>
-        <ul>
-          <li>💻 PowerShell, GAM, Active Directory, Docker e automações</li>
-          <li>📊 Planejamento financeiro escolar e análise de custos</li>
-          <li>🧑‍🏫 Liderança, comunicação e transformação organizacional</li>
-          <li>📱 Criação de sites, dashboards e campanhas digitais</li>
-        </ul>
-      </section>
+        <section class="container">
+          <h2>Principais Competências</h2>
+          <ul>
+            <li>💻 PowerShell, GAM, Active Directory, Docker e automações</li>
+            <li>📊 Planejamento financeiro escolar e análise de custos</li>
+            <li>🧑‍🏫 Liderança, comunicação e transformação organizacional</li>
+            <li>📱 Criação de sites, dashboards e campanhas digitais</li>
+          </ul>
+        </section>
 
-      <section class="container">
-        <h2>Contato</h2>
-        <p>
-          Você pode me encontrar no
-          <a href="https://www.linkedin.com/in/diogornunes/" target="_blank"
-            >LinkedIn</a
-          >
-          ou entrar em contato pelo e-mail:<a
-            href="mailto:contato@diogonunes.com.br"
-          >
-            <strong>contato@diogonunes.com.br</strong></a
-          >.
-        </p>
-      </section>
-    </main>
+        <section class="container">
+          <h2>Contato</h2>
+          <p>
+            Você pode me encontrar no
+            <a href="https://www.linkedin.com/in/diogornunes/" target="_blank"
+              >LinkedIn</a
+            >
+            ou entrar em contato pelo e-mail:<a
+              href="mailto:contato@diogonunes.com.br"
+            >
+              <strong>contato@diogonunes.com.br</strong></a
+            >.
+          </p>
+        </section>
+      </main>
+    </div>
 
     <footer>
       <p>&copy; 2025 Diogo Rodrigues Nunes — Todos os direitos reservados</p>
